--- a/Signal/translations/en.lproj/PluralAware.stringsdict
+++ b/Signal/translations/en.lproj/PluralAware.stringsdict
@@ -130,6 +130,22 @@
 			<string>Deny %ld Requests?</string>
 		</dict>
 	</dict>
+	<key>CALL_LINK_JOIN_REQUEST_AMOUNT_MORE_BUTTON_%ld</key>
+	<dict>
+		<key>NSStringLocalizedFormatKey</key>
+		<string>%#@text@</string>
+		<key>text</key>
+		<dict>
+			<key>NSStringFormatSpecTypeKey</key>
+			<string>NSStringPluralRuleType</string>
+			<key>NSStringFormatValueTypeKey</key>
+			<string>d</string>
+			<key>one</key>
+			<string>+%ld Request</string>
+			<key>other</key>
+			<string>+%ld Requests</string>
+		</dict>
+	</dict>
 	<key>CALL_LINK_REQUEST_HEADER_COUNT_%d</key>
 	<dict>
 		<key>NSStringLocalizedFormatKey</key>
